src/objects/Integration_Settings__mdt.object
<CustomObject>
    <description>Integration Settings</description>
    <fields>
        <fullName>Integration_Type__c</fullName>
        <label>Integration Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retry_Limit__c</fullName>
        <description>Generic retry limit for a trying a callout for a failed one.</description>
        <inlineHelpText>Generic retry limit for a trying a callout for a failed one.</inlineHelpText>
        <label>Retry Limit</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Retry_Interval__c</fullName>
        <inlineHelpText>Time in seconds</inlineHelpText>
        <label>Retry Interval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Integration Setting</label>
    <pluralLabel>Integration Settings</pluralLabel>
</CustomObject>